# tspeed

./: .CMakeLists.txt.swp  .gitignore  .ycm_extra_conf.py  CMakeLists.txt  README.md  TSPEED.hpp  a.out  main.cpp
Examples/: CMakeLists.txt  Lamb  Wedge  a.out
Examples/Meshes/: Bigsquare.geo  Bigsquare.msh  Lamb.geo  Lamb.msh  Lamb_fullyunstruct.msh  Lamb_fullyunstruct2.geo  Lamb_fullyunstruct2.msh  Lamb_fullyunstruct3.geo  Lamb_fullyunstruct3.msh  Mercerat1.geo  Mercerat1.msh  Mercerat1_fine.geo  Mercerat1_fine.msh  Mercerat1_large.geo  Mercerat1_large.msh  Mercerat1_nonper.geo  Trapezio.geo  cyl.geo  cyl.msh  parallelogram.geo  periodic.geo  periodic.msh  points.pos  square_Nnull_23tria.geo  square_Nnull_28tria.msh  square_Nnull_4tria.msh  unstructured.geo  unstructured.msh  wedge.geo
Examples/Receivers/: Prova.rcv  cyl.rcv  lamb.rcv  merc.rcv  prova.rcv  wedge.rcv
Examples/src/: .wedge.cpp.swp  Lamb.cpp  Wedge.cpp  main.cpp  wedge.cpp
Gmsh_meshes/: Lamb_fullyunstruct.geo  Lamb_fullyunstruct2.geo  Lamb_new_unstruct.msh  wedge.msh  wedge2.geo  wedge2.msh
MATLAB_files/: load_and_plot.m  load_and_plot_lamb.m  plot_seismogram.m  vtk_mesh_out.m  vtk_output.m  vtk_vector_out.m
cmake/: FindEigen3.cmake
doc/: CMakeLists.txt  Doxyfile.in
doc/html/: CMakeCCompilerId_8c.html  CMakeCXXCompilerId_8cpp.html  Dunavant_8cpp.html  Dunavant_8hpp.html  Dunavant_8hpp_source.html  FESpace_8hpp.html  FESpace_8hpp_source.html  FESpace__imp_8hpp.html  FESpace__imp_8hpp_source.html  Force_8cpp.html  Force_8hpp.html  Force_8hpp_source.html  Force__imp_8hpp.html  Force__imp_8hpp_source.html  Geometry_8cpp.html  Geometry_8hpp.html  Geometry_8hpp_source.html  Lamb_8cpp.html  Matrices__imp_8hpp.html  Matrices__imp_8hpp_source.html  Mesh_8cpp.html  Mesh_8hpp.html  Mesh_8hpp_source.html  MyMat_8cpp.html  MyMat_8hpp.html  MyMat_8hpp_source.html  Parameters_8cpp.html  QuadratureRule_8cpp.html  QuadratureRule_8hpp.html  QuadratureRule_8hpp_source.html  QuadratureRule__imp_8hpp.html  QuadratureRule__imp_8hpp_source.html  Receivers_8cpp.html  Receivers_8hpp.html  Receivers_8hpp_source.html  Receivers__imp_8hpp.html  Receivers__imp_8hpp_source.html  ShapeFunctions_8cpp.html  ShapeFunctions_8hpp.html  ShapeFunctions_8hpp_source.html  (+160 more)
doc/html/search/: all_61.js  all_62.js  all_64.js  all_65.js  all_66.js  (+93 more)
doc/latex/: CMakeCCompilerId_8c.tex  CMakeCXXCompilerId_8cpp.tex  Dunavant_8cpp.tex  Dunavant_8hpp.tex  FESpace_8hpp.tex  FESpace__imp_8hpp.tex  Force_8cpp.tex  Force_8hpp.tex  Force__imp_8hpp.tex  Geometry_8cpp.tex  Geometry_8hpp.tex  Lamb_8cpp.tex  Matrices__imp_8hpp.tex  Mesh_8cpp.tex  Mesh_8hpp.tex  MyMat_8cpp.tex  MyMat_8hpp.tex  Parameters_8cpp.tex  QuadratureRule_8cpp.tex  QuadratureRule_8hpp.tex  QuadratureRule__imp_8hpp.tex  Receivers_8cpp.tex  Receivers_8hpp.tex  Receivers__imp_8hpp.tex  ShapeFunctions_8cpp.tex  ShapeFunctions_8hpp.tex  ShapeFunctions__imp_8hpp.tex  TSPEED_8hpp.tex  TimeAdvance_8cpp.tex  TimeAdvance_8hpp.tex  TimeAdvance__imp_8hpp.tex  annotated.tex  build_2include_2TSPEED_8hpp.tex  classTspeed_1_1BaseMat.eps  classTspeed_1_1BaseMat.tex  classTspeed_1_1BoundaryAdapted.eps  classTspeed_1_1BoundaryAdapted.tex  classTspeed_1_1Dubiner.eps  classTspeed_1_1Dubiner.tex  classTspeed_1_1Dunavant.tex  (+71 more)
lib/: .CMakeLists.txt.swp  CMakeLists.txt
lib/include/: .FESpace.hpp.swp  .FESpace_imp.hpp.swp  .Force.hpp.swp  .Force_imp.hpp.swp  .Matrices_imp.hpp.swp  .Mesh.hpp.swp  .MyMat.hpp.swp  .Receivers.hpp.swp  .Receivers_imp.hpp.swp  .TimeAdvance.hpp.swp  .TimeAdvance_imp.hpp.swp  Dunavant.hpp  FESpace.hpp  FESpace_imp.hpp  Force.hpp  Force_imp.hpp  Geometry.hpp  Matrices_imp.hpp  Mesh.hpp  MyMat.hpp  QuadratureRule.hpp  QuadratureRule_imp.hpp  Receivers.hpp  Receivers_imp.hpp  ShapeFunctions.hpp  ShapeFunctions_imp.hpp  TimeAdvance.hpp  TimeAdvance_imp.hpp
lib/src/: .CMakeLists.txt.swp  .Force.cpp.swp  .MyMat.cpp.swp  .Parameters.cpp.swp  .Receivers.cpp.swp  Dunavant.cpp  Force.cpp  Geometry.cpp  Mesh.cpp  MyMat.cpp  Parameters.cpp  Receivers.cpp  ShapeFunctions.cpp  TimeAdvance.cpp
